--- a/nginx.conf
+++ b/nginx.conf
@@ -94,34 +94,34 @@ http {
 
 
     # HTTPS server
-          #
-          #server {
-          #    listen       443 ssl;
-          #    server_name  localhost;
+    #
+    #server {
+    #    listen       443 ssl;
+    #    server_name  localhost;
 
-          #    ssl_certificate      cert.crt;
-          #    ssl_certificate_key  cert.key;
+    #    ssl_certificate      cert.pem;
+    #    ssl_certificate_key  cert.key;
 
-          #    ssl_session_cache    shared:SSL:1m;
-          #    ssl_session_timeout  5m;
+    #    ssl_session_cache    shared:SSL:1m;
+    #    ssl_session_timeout  5m;
 
-          #    ssl_ciphers  HIGH:!aNULL:!MD5;
-          #    ssl_prefer_server_ciphers  on;
+    #    ssl_ciphers  HIGH:!aNULL:!MD5;
+    #    ssl_prefer_server_ciphers  on;
 
-          #    location / {
-          #        root   html;
-          #        index  index.html index.htm;
-          #    }
-          #}
-          
-        server {
-            listen 443 ssl;  #enable http1
-            # listen 443 ssl http2; #enable http2
+    #    location / {
+    #        root   html;
+    #        index  index.html index.htm;
+    #    }
+    #}
+
+	server {
+            # listen 443 ssl;  #enable http1
+            listen 443 ssl http2; #enable http2
 
             ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
 
-            ssl_certificate      html/lab4/cert/localhost.crt;
-            ssl_certificate_key  html/lab4/cert/localhost.key;
+            ssl_certificate      cert/localhost.crt;
+            ssl_certificate_key  cert/localhost.key;
 
             ssl_session_cache    shared:SSL:1m;
             ssl_session_timeout  5m;
@@ -132,10 +132,9 @@ http {
             server_name  localhost;
 
             location / {
-                root   /usr/local/etc/nginx/html/lab4;
+                root   html/lab4;
                 index  index.html index.htm;
             }
         }
-
     include servers/*;
 }
